# function.rs

./: .gitignore  Cargo.toml  README.md  codegen.toml  color.html  debug.txt  log.txt  s.txt  todo.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs  tcp.rs
client/typescript/: databuf.test.ts  playground.ts  socket.ts
codegen/: Cargo.toml  WebSocketStream.ts
codegen-macro/: Cargo.toml
codegen-macro/src/: lib.rs
codegen/src/: conf.rs  lib.rs  main.rs  rust_codegen.rs  utils.rs
codegen/src/get_ty/: basic.rs  mod.rs  wrapper.rs
codegen/tests/: basic.rs
doc/: book.toml
docs/: RFC 6455_ The WebSocket Protocol.html
example/: Cargo.toml  codegen.toml  run.bash  tsconfig.json
example/client/: main.ts  transport.ts
example/client/lib/: Example.ts  databuf.lib.ts
example/src/: lib.rs  main.rs  other.rs
examples/: basic.rs
examples/example/: Cargo.toml  codegen.toml
examples/example/src/: codegen.rs  main.rs
frpc/: Cargo.toml
frpc-codegen/: Cargo.toml  README.md
frpc-codegen/src/: code_formatter.rs  fmt.rs  interface_path.rs  lib.rs  utils.rs  writer.rs
frpc-codegen/src/java_script/: mod.rs  prelude.ts  transport.ts
frpc-codegen/src/javascript/: code.rs  code_formatter.rs  decode.ts  encode.ts  interface.rs  mod.rs  transport.ts  utils.ts
frpc-macro/src/: lib.rs
frpc-macros/: Cargo.toml
frpc-macros/src/: declare.rs  lib.rs  message.rs  rpc.rs
frpc-message/: Cargo.toml
frpc-message/src/: basic.rs  collection.rs  lib.rs  wrapper.rs
frpc-transport/: Cargo.toml  index.html
frpc-transport/cert/: cert.pem  key.pem
frpc-transport/src/: http.rs
frpc/src/: __private.rs  beta.rs  ctx.rs  input.rs  lib.rs  output.rs  private.rs  rpc.rs  state.rs  util.rs
frpc/tests/: basic.rs  play.rs  utils.rs
get_ty/: basic.rs  collection.rs
irpc/: Cargo.toml  lib.rs  responce.rs  utils.rs
irpc/src/: context.rs  func.rs  handler.rs  lib.rs  response.rs  rpc.rs
irpc/src/response/: mod.rs
lib/: README.md
lib/frpc-codegen/: Cargo.toml
lib/frpc-codegen-client/: Cargo.toml  client
lib/frpc-codegen-client/src/: code_writer.rs  config.rs  lib.rs
lib/frpc-codegen/src/: fmt.rs  lib.rs  logger.rs  main.rs  path.rs
lib/frpc-macros/src/: declare.rs  lib.rs  message.rs  utils.rs
lib/frpc-message/: Cargo.toml
lib/frpc-message/src/: basic.rs  collection.rs  lib.rs  wrapper.rs
lib/frpc-transport/: Cargo.toml
lib/frpc-transport/src/: http.rs  http2.rs  lib.rs
lib/std-lib/src/: async_fn_once.rs  fmt.rs  fn_once.rs  lib.rs
lib/typescript/: __mod.ts  databuf.ts  decode.ts  encode.ts  mod.ts  playground.ts  serde.test.ts  socket.ts  transport.ts  utils.ts
lib/typescript/databuf/: decode.ts  encode.ts  fuzz.ts  mod.ts  serde.test.ts  utils.ts
libs/frpc-codegen/: Cargo.toml
libs/frpc-codegen-client/: Cargo.toml  client
libs/frpc-codegen-client/src/: code_writer.rs  config.rs  lib.rs
libs/frpc-codegen/src/: lib.rs  path.rs
libs/frpc-macros/: Cargo.toml
libs/frpc-macros/src/: declare.rs  lib.rs  message.rs
libs/frpc-message/: Cargo.toml
libs/frpc-message/src/: collection.rs  lib.rs
libs/frpc-transport/: Cargo.toml
libs/frpc-transport-core/: Cargo.toml
libs/frpc-transport-core/src/: lib.rs
libs/frpc-transport-http/: Cargo.toml
libs/frpc-transport-http/src/: lib.rs
libs/frpc-transport/src/: http2.rs
libs/std-lib/: Cargo.toml
libs/std-lib/src/: async_fn_once.rs  lib.rs
libs/type-id/: Cargo.toml
libs/type-id-derive-impl/: Cargo.toml
libs/type-id-derive-impl/src/: lib.rs  utils.rs
libs/type-id/src/: collection.rs  lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
macros/src/: lib.rs
server/: Cargo.toml
server/src/: client.rs  lib.rs  proto.rs  utils.rs
src/: __code__.rs  __private.rs  context.rs  definition.rs  fn_once.rs  input.rs  lib.rs  main.rs  output.rs  private.rs  responce.rs  server.rs  util.rs  utils.rs
src/message/: basic.rs  collection.rs  mod.rs  wrapper.rs
std-trait/: Cargo.toml  fn_once.rs  lib.rs
tests/: basic.rs  example.rs  play.rs  root.rs  rpc.rs
tests/echo/: mod.rs  mod.ts
tests/echo_data/: mod.rs
tests/validate/: mod.rs  mod.ts
tests/validate_data/: mod.rs  mod.ts
transport/: Cargo.toml
transport/src/: lib.rs
typegen/: Cargo.toml  README.md
typegen/src/: basic.rs  collection.rs  collections.rs  encoder.rs  fn_ty.rs  lib.rs  ty.rs  utils.rs  wrapper.rs
typegen/src/typescript/: enumurate.rs  function.rs  mod.rs  structure.rs  typegen.rs  union_ty.rs
websocket/: Cargo.toml
websocket/src/: convert.rs  lib.rs  rsv.rs  serde.rs  utils.rs
(+31 files in other folders)
