[workspace]
members = ["lib/*"]

[package]
name = "frpc"
version = "0.0.1"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
keywords = ["rpc"]
description = "RPC framework"

[dependencies]
async-trait = "0.1"
databuf = "0.3"

std-lib = { path = "lib/std-lib" }
frpc-macros = { version = "0.0.1", path = "lib/frpc-macros" }
frpc-message = { version = "0.0.1", path = "lib/frpc-message", features = ["encode"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
frpc-transport = { path = "lib/frpc-transport" }
frpc-codegen-client = { path = "lib/frpc-codegen-client" }

[profile.dev.package."frpc-codegen-client"]
opt-level = 3

[[test]]
name = "rpc"
harness = false
