[workspace]
members = ["libs/*"]

[package]
name = "frpc"
version = "0.0.1"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
keywords = ["rpc"]
description = "RPC framework"

[dependencies]
async-trait = "0.1"
databuf = "0.3"

std-lib = { path = "libs/std-lib" }
frpc-macros = { version = "0.0.1", path = "libs/frpc-macros" }
frpc-message = { version = "0.0.1", path = "libs/frpc-message", features = ["encode"] }
async-gen = "0.2"
cfg-if = "1.0.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
frpc-transport = { path = "libs/frpc-transport" }
frpc-codegen-client = { path = "libs/frpc-codegen-client" }

[profile.dev.package."frpc-codegen-client"]
opt-level = 3

[[test]]
name = "rpc"
harness = false
