[workspace]
members = ["libs/*"]

[package]
name = "frpc"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
keywords = ["rpc"]
description = "RPC framework"

[dependencies]
databuf = "0.3"
async-gen = "0.2"

std-lib = { version = "0.1", path = "libs/std-lib" }
frpc-macros = { version = "0.1", path = "libs/frpc-macros" }
frpc-message = { version = "0.1", path = "libs/frpc-message" }
frpc-transport-core = { version = "0.1", path = "libs/frpc-transport-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
frpc-transport-http = { path = "libs/frpc-transport-http" }
frpc-codegen-client = { path = "libs/frpc-codegen-client" }

[profile.dev.package."frpc-codegen-client"]
opt-level = 3

[[test]]
name = "rpc"
harness = false
