[package]
name = "frpc"
version = "0.0.1"
edition = "2021"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/frpc.rs"
keywords = ["rpc"]
description = "Flash RPC framework"

[dependencies]
databuf = "0.3"

frpc-macros = { version = "0.0.1", path = "../frpc-macros" }
frpc-message = { version = "0.0.1", path = "../frpc-message", features = ["encode"] }

libloading = "0.7.4"

# async-trait = "0.1"
# tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
