[package]
name = "frpc-codegen-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"] }

frpc-codegen = { path = "../frpc-codegen" }
frpc-message = { path = "../frpc-message", features = ["encode", "decode"] }
