[package]
name = "frpc-codegen-client"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["dylib"]

[dependencies]
toml = "0.7"
serde = { version = "1", features = ["derive"] }

frpc-codegen = { version = "0.1", path = "../frpc-codegen" }
frpc-message = { version = "0.1",path = "../frpc-message" }
